<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021-2024 Simon Fentzl
  ~     This file is part of Notification-Demo
  ~
  ~     Notification-Demo is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Notification-Demo is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Notification-Demo.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/Pop_Default"
        android:title="@string/Pop_Default">
    </item>
    <item android:id="@+id/Pop_Progress"
        android:title="@string/Pop_Progress">
    </item>
    <item android:id="@+id/Pop_BigPicture"
        android:title="@string/Pop_Expandable">
    </item>
    <item android:id="@+id/Pop_Media"
        android:title="@string/Pop_Media">
    </item>
    <item android:id="@+id/Pop_Rply"
        android:title="@string/Pop_Rply">
    </item>
    <item android:id="@+id/Pop_BigText"
        android:title="@string/Pop_BigText">
    </item>
    <item android:id="@+id/Pop_Custom"
        android:title="@string/Pop_Custom">
    </item>
</menu>